2003-05-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_cimd2.c: Fixing wrong time for messages. 
      Thanks again to Angel for this fix.

2003-05-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smscconn_p.h, gw/smscconn.c, gw/smsc/smsc_at2.h, 
      gw/smsc/smsc_[at2|cimd2|smpp].c: Angel's alt-dcs abstraction layer
      patch for at2, cimd2 and smpp. Thanks a lot.
      [Msg-ID: <NCEOLLKPFAEAOBBMHNHEAECCGAAA.afradejas@mediafusion.es>]

2003-05-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/shared.c, gw/smsbox.c: fixing mainly BUG#24 for sending too long 
      UDH indicator sequences. This does not cover the effect, when UDH is
      pretty long and Msg body is getting split and hence the UDH gets
      prepended with the UDH sequence numbers. At least this fix ensures 
      that octstr_copy() inside sms_split() does not panic. 
      Patch based on post by "Oleg Titov" <Oleg.Titov@aleph-tec.com>.
      [Msg-ID: <198463211.20030505104734@aleph-tec.com>]

2003-05-26  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bearerbox.c: bugfix from previous commit.

2003-05-26  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/cfg.[ch], gw/bearerbox.c, doc/userguide/userguide.xml:
      added new command line option ("-g" or "--generate") to bearebox.
      This option just dump all known config
      groups and options to stdout. Later (if we have module API) we can
      dump default values also.

2003-05-24  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/octstr.[ch]: Made functions arguments const, then it's clear
      for caller whether we manipulate arguments.

2003-05-24  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * contrib/mon/kannel.monitor: applied fix from Dariusz Markowicz
      <00a301c321fa$08edab00$d4e34cd5@oem>

2003-05-19  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: fixed compiler warning

2003-05-16  Stipe Tolj  <tolj@wapme-systems.de>